# backend/openapi.yml
@@ -159,7 +159,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/QrCode"
+                $ref: "#/components/schemas/QrCodeWithContent"
         401:
           $ref: "#/components/responses/Unauthorized"
         403:
@@ -596,6 +596,15 @@ components:
           type: string
           description: Unique slug for accessing this QR code
       required: [id, owner_id, created_at, updated_at, slug]
+
+    QrCodeWithContent:
+      type: object
+      properties:
+        qrcode:
+          $ref: "#/components/schemas/QrCode"
+        content:
+          $ref: "#/components/schemas/Content"
+      required: [qrcode]
 
     Content:
       type: object
